--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "build": {
     "appId": "eu.life-edu.lifeonedrivesync",
-    "productName": "LiFE OneDrive Sync",
+    "productName": "LiFE-OneDrive-Sync",
     "icon": "icon.png",
     "linux": {
       "target": "AppImage",
